sbuild (0.57.2-1) unstable; urgency=low

  * debian/copyright: Update copyright holders and copyright information.
  * debian/rules: Run dh_link in binary-indep target to correct symlinks.
  * debian/wanna-build.install: Install manual pages.
  * man/sbuild.1.in: Add missing character, thanks to LI Daobing
    (Closes: #474487).
  * debian/README.Debian: Remove reference to README-buildd.chroot
    (Closes: #474030), thanks to Marc Fargas.  Update sbuild statistics
    information.
  * Add --apt-update option to sbuild to run "apt-get update" in the
    chroot prior to fetching sources and building (Closes: #472350).
    Thanks to Timothy G Abbott for this patch.
  * Add --chroot option to specify a chroot separately from the
    distribution name (Closes: #474160).  Thanks to Simon McVittie for
    this patch.
  * debian/control: Depend on debhelper version 6 or greater (Closes:
    #477655).  Thanks to Martin F Krafft.

 -- Roger Leigh <rleigh@debian.org>  Sun, 27 Apr 2008 18:20:38 +0100

sbuild (0.57.1-1) unstable; urgency=low

  * New upstream release.
  * debian/control:
    - Depend upon schroot >= 1.1.6.  This version includes a
      SESSION_CLONE property, used to determine if a chroot is cloned,
      and hence package removal may be skipped.
    - Add wanna-build package.
  * debian/rules: set libexecdir to /usr/share, for compatibility with
    locations of scripts in earlier versions.
  * debian/schroot.install: use /usr/share in place of /usr/lib
    (Closes: #458779).
  * debian/wanna-build.install: New file: files for wanna-build.
  * sbuild: Don't parse output of dpkg-source (Closes: #471747).

 -- Roger Leigh <rleigh@debian.org>  Thu, 27 Mar 2008 20:42:56 +0000

sbuild (0.57.0-1) unstable; urgency=low

  * Sbuild/*.pm: Reindent to increase readability.
  * Sbuild/Chroot.pm: set APT::Install-Recommends to false inside the
    chroot (Closes: #449253).
  * Sbuild/Conf.pm: Add and export $check_depends_algorithm.
    [Jan-Marek Glogowski]
  * sbuild: